tests/tests.txt
Expected failing - mangled function definition
fndef.ke
error[E001]: Invalid or unexpected token (expected 'lparen', got 'lcurly').
./tests/fndef.ke:1:5
1 | fn x{
  |     ^
=-=
Expected failing - overlapping immutable references
irefoverlap.ke
error[E009]: Binding 'x' has multiple immutable references.
./tests/irefoverlap.ke:4:13
4 |     let z = &y
  |             ^^         
First reference here.
./tests/irefoverlap.ke:3:13
3 |     let y = &x
  |             ^^
=-=
Expected failing - test E018
E018.ke
error[E018]: Cannot deref non-reference type 'std::i32'.
./tests/E018.ke:5:13
5 |     let _ = *x
  |             ^^  
=-=
Expected failing - use after move with if
E007_if.ke
error[E007]: Use of binding 'x' after move.
./tests/E007_if.ke:7:13
7 |     let n = x
  |             ^         
It was moved here:
./tests/E007_if.ke:5:17
5 |         let _ = x
  |                 ^     
=-=
Expected passing - Use of references with scopes
iref_ifblock.ke

=-=
Expected passing - if, elif and else
elif.ke

=-=
Expected failing - value does not live long enough
E023.ke
error[E023]: Value does not live long enough.
./tests/E023.ke:3:10
3 |         &1
  |          ^         
It must live until the end of this block:
./tests/E023.ke:2:13
2 |     let x = if 1==2 {
  |             ^^^^^^^^^